# Schedule_Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  list.c  main.c  utilities.c
.ssh/: known_hosts
data/: output_BST  output_EBST  output_OL
include/: bstree.h  instance.h  list.h  model_ScheduleModel.h  olist.h  schedule.h  utilities.h
java/application/: App.java  application.css
java/controller/: ScheduleController.java
java/lib/: schedulelibrary.lib
java/model/: ScheduleModel.java
java/view/: Schedule.fxml  ScheduleView.java
src/: application_App.c  bstree.c  bstree.h  instance.c  list.c  main.c  model_ScheduleModel.c  olist.c  olist.h  schedule.c  utilities.c
